#11 - 좋아요 수 집계 테이블 분리
조회 후에 insert 하는 방식과 다르게 테이블을 분리해 조회 없이 inset만 하는 방법으로 만들었다