@@ -2,6 +2,7 @@ package com.example.mysql.application.usacase;
 
 import com.example.mysql.domain.follow.entity.Follow;
 import com.example.mysql.domain.follow.service.FollowReadService;
+import com.example.mysql.domain.member.dto.MemberDto;
 import com.example.mysql.domain.member.entity.Member;
 import com.example.mysql.domain.member.service.MemberReadService;
 import lombok.RequiredArgsConstructor;
@@ -12,16 +13,13 @@ import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
-public class GetFollowingMembersUsacase {
+public class GetFollowingMembersUsecase {
     final private MemberReadService memberReadService;
     final private FollowReadService followReadService;
 
-    public List<Member> execute(Long memberId) {
-        var follows = followReadService.getFollowings(memberId);
-        var memberIds = follows
-                .stream()
-                .map(Follow::getToMemberId)
-                .collect(Collectors.toList());
-        return memberReadService.getMembers(memberIds);
+    public List<MemberDto> execute(Long memberId) {
+        var followings = followReadService.getFollowings(memberId);
+        var followingMemberIds = followings.stream().map(Follow::getToMemberId).toList();
+        return memberReadService.getMembers(followingMemberIds);
     }
 }
